--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "electron": "^4.0.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "youtube-dl": "^1.12.2"
   }
 }
