--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Kemarskiy Nikita",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
     "electron": "^4.0.0",
     "request": "^2.88.0",
     "youtube-dl": "^1.12.2"
