--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "youtube-to-mp3",
   "version": "1.0.0",
   "description": "This is an Electron application, which can convert YouTube video to an mp3 file.",
-  "main": "index.js",
+  "main": "src/main/index.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "build-linux": "electron-builder build --linux",
+    "build-windows": "electron-builder build --win"
   },
-  "author": "Kemarskiy Nikita",
+  "author": {
+    "name": "Kemarskiy Nikita",
+    "email": "sashapobeditel1980@gmail.com"
+  },
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
@@ -14,6 +19,21 @@
     "youtube-dl": "^1.12.2"
   },
   "devDependencies": {
-    "electron": "^4.0.1"
+    "electron": "^4.0.1",
+    "electron-builder": "^20.38.4"
+  },
+  "build": {
+    "appId": "com.electron.youtube-to-mp3",
+    "productName": "YouTube to mp3",
+    "linux": {
+      "target": "deb",
+      "icon": "src/icons/png",
+      "executableName": "Youtube to mp3",
+      "category": "Utility"
+    },
+    "win": {
+      "target": "nsis",
+      "icon": "src/icons/win/256x256.ico"
+    }
   }
 }
